--- a/exercicios/style.css
+++ b/exercicios/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 main {
-    background-color: white;
+    background-color: red;
     width: 500px;
     padding: 20px;
     margin: auto;
